fixed centering issue in services list
With Firefox debug mode at width ~742px until ~424px the list items are
not centered in the page.
this will align it when there is a single column in the list.

--- a/themes/brand-cloud-castles/assets/scss/_services-list.scss
+++ b/themes/brand-cloud-castles/assets/scss/_services-list.scss
@@ -42,6 +42,7 @@
         list-style: none;
         flex-wrap: wrap;
         margin-top: 0;
+        justify-content: center;
     
         &__el{
             max-width: 360px;
